# working-journal-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backend/: database.py  main.py
backend/api/: activities.py  ai.py  config.py  filesystem.py  git.py  journals.py  logs.py  projects.py  stats.py
backend/models/: __init__.py  activity.py  api_config.py  journal_entry.py  project.py  ssh_config.py  token_usage.py  work_session.py
backend/services/: activity_tracker.py  ai_service.py  journal_generator.py  ssh_tunnel.py
cli/: main.py
cli/commands/: config.py  project.py  start.py  status.py  stop.py  summary.py
config/: .env.example  config.example.yaml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/api/: client.js
frontend/src/components/: ActivityTimeline.vue  ApiTester.vue  DirPicker.vue
frontend/src/router/: index.js
frontend/src/stores/: project.js
frontend/src/views/: Config.vue  Dashboard.vue  Debug.vue  Journals.vue  Logs.vue  Projects.vue  Stats.vue
scripts/: dev_setup.ps1  dev_setup.sh  generate_journals.py  init_db.py  launch.ps1  launch.sh  migrate_add_project.py  migrate_remove_path.py
shared/: config.py  constants.py  logging_config.py  path_map.py  platform_compat.py  utils.py
tracker/: daemon.py  run_component.py
tracker/monitors/: file_monitor.py  git_monitor.py
